--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+.button{
+  padding:10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.result{
+    padding: 0 10px 0 10px;
   }
+
+input {
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.srodek {
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+button {
+  border-radius: 5px;
+  font-family: 'Open Sans',
+  sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  max-width: 40px;
+  outline: 10;
+  width: 80%;
+}
+button.primary {
+    background: #f58733;
+}
+button.secondary {
+  background: #c1d7aa;
 }
